[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickbase-data-client"
version = "0.1.1"
description = "Python client for Quickbase data access with optional schema caching and pandas helpers"
authors = [{ name = "Derek Banker", email = "dbb2002@gmail.com" }]
readme = "README.md"
license = "Unlicense"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["quickbase", "api", "data", "pandas", "schema"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy",
    "pandas",
    "requests",
]

[project.urls]
Homepage = "https://github.com/Derek-Banker/QuickBase-Data-Client"
Repository = "https://github.com/Derek-Banker/QuickBase-Data-Client"
Issues = "https://github.com/Derek-Banker/QuickBase-Data-Client/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.20",
    "pytest",
    "pytest-cov",
    "python-dotenv",
    "ruff",
    "types-requests",
]

[project.scripts]
generate-schema = "quickbase_data_client.code_generation.generate_schema:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["quickbase_data_client*"]
namespaces = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "build", "dist", "*.egg-info", "__pycache__"]
markers = [
    "integration: live Quickbase integration tests requiring explicit env vars",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "examples"]
extend-exclude = [
    "src/quickbase_data_client/code_generation",
    "src/quickbase_data_client/typed_structs",
    "src/quickbase_data_client/schema_manager.py",
]

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests", "examples"]
mypy_path = "src"
namespace_packages = true
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true
follow_imports_for_stubs = true

# NumPy stubs can use syntax newer than this package's Python 3.10 mypy target.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "quickbase_data_client.code_generation.*",
    "quickbase_data_client.typed_structs.*",
    "quickbase_data_client.schema_manager",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["quickbase_data_client.async_quickbase_api"]
disable_error_code = ["override"]

[[tool.mypy.overrides]]
module = ["quickbase_data_client.identifier"]
disable_error_code = ["attr-defined", "misc", "no-redef"]

[tool.coverage.run]
branch = true
source = ["quickbase_data_client"]
omit = [
    "src/quickbase_data_client/code_generation/*",
    "src/quickbase_data_client/typed_structs/*",
    "src/quickbase_data_client/schema_manager.py",
]

[tool.coverage.report]
fail_under = 72
show_missing = true
skip_covered = true
